make-a-wish-salesforce/src/objects/VisualAntidote__Web_Services_Log__c.object
<CustomObject>
    <fields>
        <fullName>VisualAntidote__Dataset__c</fullName>
        <label>Dataset</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Field_Type__c</fullName>
        <label>Field Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Object_Type__c</fullName>
        <label>Object Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__SF_Org_Instance_ID__c</fullName>
        <label>SF Org Instance ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Salesforce_ID__c</fullName>
        <label>Salesforce ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Web Services Log</label>
    <listViews>
        <fullName>VisualAntidote__All</fullName>
        <columns>NAME</columns>
        <columns>VisualAntidote__Type__c</columns>
        <columns>VisualAntidote__SF_Org_Instance_ID__c</columns>
        <columns>VisualAntidote__Object_Name__c</columns>
        <columns>VisualAntidote__Object_Type__c</columns>
        <columns>VisualAntidote__Field_Name__c</columns>
        <columns>VisualAntidote__Field_Type__c</columns>
        <columns>VisualAntidote__Dataset__c</columns>
        <columns>VisualAntidote__Salesforce_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Log-{00000}</displayFormat>
        <label>Web Services Logs  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Web Services Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>